# ShanhaiSpirit

./: README.md
ShanhaiSpirit/: CONTRIBUTING.md  LICENSE  README.md  SIGGRAPH_CLASSIFICATION.md  config.py  creature.py  debug_log.txt  debug_test.py  generate_assets.py  main_log.txt  minimal_test.py  pyproject.toml  remove_bg_generic.py  remove_black_bg.py  remove_white_bg.py  requirements.txt  restore_white_bg.py  shanhai_main.py  simple_test.py  test_tracker.py  tracker.py
ShanhaiSpirit/src/shanhai/: __init__.py  config.py  creature.py  main.py  tracker.py
ShanhaiSpirit/src/shanhai_spirit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ShanhaiSpirit/tests/: test_config.py  test_creature.py  test_tracker.py
